@@ -30,10 +30,10 @@
 ///
 /// \brief Print PAGE XML format preambule.
 
-# include <ctime>
 # include <fstream>
 # include <mln/core/alias/box2d.hh>
 # include <scribo/core/document.hh>
+# include <scribo/io/xml/internal/time_info.hh>
 
 namespace scribo
 {
@@ -75,17 +75,10 @@ namespace scribo
 	  else
 	    output << "<PcGts>" << std::endl;
 
-
-	  time_t cur_time = time(NULL);
-	  tm * time_struct;
-	  time_struct = localtime(&cur_time);
-	  char time_info[55];
-	  strftime(time_info, 55, "%Y-%m-%dT%H:%M:%S", time_struct);
-
 	  output << "  <Metadata>" << std::endl;
 	  output << "    <Creator>LRDE</Creator>" << std::endl;
-	  output << "    <Created>" << time_info << "</Created>" << std::endl;
-	  output << "    <LastChange>" << time_info << "</LastChange>" << std::endl;
+	  output << "    <Created>" << time_info() << "</Created>" << std::endl;
+	  output << "    <LastChange>" << time_info() << "</LastChange>" << std::endl;
 	  output << "    <Comments>Generated by Scribo from Olena.</Comments>" << std::endl;
 	  output << "  </Metadata>" << std::endl;
 
